<resources>
    <string name="app_name">Movie Manager</string>
    <string name="the_movie_database">The Movie Database</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_item_movies">Movies</string>
    <string name="nav_item_now_playing">Now Playing</string>
    <string name="nav_item_upcoming">Upcoming</string>
    <string name="nav_item_popular">Popular</string>
    <string name="nav_item_top_rated">Top Rated</string>

    <string name="nav_item_tvshows">TV Shows</string>
    <string name="nav_item_tv_popular">Popular</string>
    <string name="nav_item_tv_top_rated">Top Rated</string>
    <string name="nav_item_tv_ontv">On TV</string>
    <string name="nav_item_tv_airing_today">Airing Today</string>

    <string name="nav_title_profile">Profile</string>
    <string name="nav_item_logout">Logout</string>

    <string name="movie_type">movie</string>
    <string name="movie_category_now_playing">now_playing</string>
    <string name="movie_category_upcoming">upcoming</string>
    <string name="movie_category_popular">popular</string>
    <string name="movie_category_top_rated">top_rated</string>

    <string name="tv_type">tv</string>
    <string name="tv_category_popular">popular</string>
    <string name="tv_category_top_rated">top_rated</string>
    <string name="tv_category_on_the_air">on_the_air</string>
    <string name="tv_category_airing_today">airing_today</string>

    <string name="msg_img_desc_vote_average">Vote average</string>
    <string name="msg_img_desc_vote_count">Vote count</string>
    <string name="msg_img_desc_release_date">Release Date</string>
    <string name="msg_img_desc_poster_img">Poster image</string>
    <string name="msg_img_desc_back_drop">Back drop Image</string>
    <string name="msg_img_desc_popularity">Popularity Image</string>

    <string name="det_title_overview">Overview</string>
    <string name="det_first_air_date">First air date: </string>
    <string name="det_last_air_date">Last air date: </string>
    <string name="det_number_of_episodes">Number of episodes: </string>
    <string name="det_number_of_seasons">Number of seasons: </string>
    <string name="det_release_date">Release date: </string>
    <string name="det_revenue">Revenue: </string>
    <string name="det_runtime">Runtime: </string>
    <string name="det_budget">Budget: </string>
    <string name="det_tagline">Tagline: </string>
    <string name="det_status">Status: </string>
    <string name="det_imbd">Imdb: </string>
    <string name="det_popularity">Popularity: </string>
    <string name="det_vote_count">Vote count: </string>
    <string name="msg_detail_activity_un_save_favorite">Media unsaved as favorite</string>
    <string name="msg_detail_activity_save_favorite">Media saved as favorite</string>
    <string name="msg_error_media">The information cannot be displayed at this time.</string>
</resources>
