<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_now_playing"
            android:checked="true"
            android:icon="@drawable/ic_menu_now_playing"
            android:title="@string/nav_item_now_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_menu_upcoming"
            android:title="@string/nav_item_upcoming" />
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_menu_popular"
            android:title="@string/nav_item_popular" />
        <item
            android:id="@+id/nav_top_rated"
            android:icon="@drawable/ic_menu_top_rated"
            android:title="@string/nav_item_top_rated" />
    </group>

    <item android:title="@string/nav_title_profile">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/nav_item_logout" />
        </menu>
    </item>

</menu>
