<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetOverview"
        app:layout_constraintVertical_bias="0.5">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/tvDetRuntime"
            app:layout_constraintTop_toBottomOf="@+id/tvDetRuntime">

            <TextView
                android:id="@+id/lblDetRevenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/det_revenue"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivDetMoviePoster"
                app:layout_constraintTop_toBottomOf="@+id/lblDetBudget" />

            <TextView
                android:id="@+id/lblDetRuntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/det_runtime"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivDetMoviePoster"
                app:layout_constraintTop_toBottomOf="@+id/lblDetStatus" />

            <TextView
                android:id="@+id/lblDetBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/det_budget"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivDetMoviePoster"
                app:layout_constraintTop_toBottomOf="@+id/lblDetImdb" />

            <TextView
                android:id="@+id/lblDetStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/det_status"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivDetMoviePoster"
                app:layout_constraintTop_toBottomOf="@+id/lblDetRevenue" />

            <TextView
                android:id="@+id/tvDetMovieStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/lblDetStatus"
                app:layout_constraintTop_toBottomOf="@+id/tvDetRevenue"
                tools:text="In progress" />

            <TextView
                android:id="@+id/tvDetBudget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/lblDetBudget"
                app:layout_constraintTop_toBottomOf="@+id/tvDetImdb"
                tools:text="80 millones" />

            <TextView
                android:id="@+id/tvDetRuntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/lblDetRuntime"
                app:layout_constraintTop_toBottomOf="@+id/tvDetMovieStatus"
                tools:text="135" />

            <TextView
                android:id="@+id/tvDetRevenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/lblDetRevenue"
                app:layout_constraintTop_toBottomOf="@+id/tvDetBudget"
                tools:text="555575232" />

            <ImageView
                android:id="@+id/ivDetMoviePoster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/msg_img_desc_poster_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_movie" />

            <TextView
                android:id="@+id/tvDetReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/lblDetReleaseDate"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="2014-03-02" />

            <TextView
                android:id="@+id/lblDetReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/det_release_date"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivDetMoviePoster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblDetImdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/det_imbd"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/ivDetMoviePoster"
                app:layout_constraintTop_toBottomOf="@+id/lblDetReleaseDate" />

            <TextView
                android:id="@+id/tvDetImdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAllCaps="true"
                app:layout_constraintStart_toEndOf="@+id/lblDetImdb"
                app:layout_constraintTop_toBottomOf="@+id/tvDetReleaseDate"
                tools:text="tr1396484" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>